@@ -1,5 +1,7 @@
 2008-04-04  Kouhei Sutou  <kou@cozmixng.org>
 
+	* pkg-config.rb: fix substitution for MSVC.
+
 	* extconf.rb: support output option for MSVC.
 
 	* src/rb_cairo_path.c: remove garbages.
